--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "expo-image": "~1.12.12"
+    "expo-image": "~1.12.12",
+    "expo-constants": "~16.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
