--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "expo": "~51.0.20",
+    "expo-constants": "~16.0.2",
+    "expo-image": "~1.12.12",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "expo-image": "~1.12.12",
-    "expo-constants": "~16.0.2"
+    "react-native-loading-spinner-overlay": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
